--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header .brand {
   text-decoration: none;
 }
 
+
 header .navigation {
   position: relative;
 }
@@ -80,6 +81,9 @@ section {
   height: 100%;
   top: 0;
   left: 0;
+}
+.content.active{
+  margin-left: 200px;
 }
 
 .home .content {
@@ -151,7 +155,7 @@ section {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%
+  height: 100%;
   object-fit: cover;
 }
 
@@ -162,7 +166,7 @@ section {
   justify-content: center;
   align-items: center;
   transform: translateY(80px);
-  margin-bottom 12px;
+  margin-bottom: 12px;
 }
 
 .slider-navigation .nav-btn{
