--- a/style2.css
+++ b/style2.css
@@ -91,13 +91,15 @@ padding: 0 15px;
 .container{
     display:flex;
     justify-content:space-between;
-    padding: 13px 5%;
+    padding-right: 35px ;
 }
 .left-sidebar{
-    flex-basis: 25%;
+    flex-basis: 50px;
     position:sticky;
-    top:70px;
+    top:90px;
     align-self: flex-start;
+    height: 100%;
+    background-color: rgb(220, 220, 220);
     
 }
 .right-sidebar{
@@ -127,6 +129,8 @@ padding: 0 15px;
 .imp-links a img{
     width:25px;
     margin-right:15px;
+    cursor: pointer;
+
 }
 .imp-links a:last-child{
     color: #1876f2;
@@ -780,4 +784,75 @@ border-radius: 4px;
     .info-col, .post-col{
         flex-basis:100%;
     }
+}
+
+
+
+
+
+/* aqedan */
+
+.yoo{
+    background-color: rgb(250, 250, 250);
+    width: 300px;
+    height: 350px;
+    border-radius: 8px;
+    box-shadow: 3px 3px 5px rgb(147, 147, 147);
+    position: absolute;
+    margin-left: 700px;
+    z-index: 9;
+    top: 200px;
+}
+
+.post-content
+{
+    font-size: 13px;
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+    margin-bottom:5px;
+}
+.marg
+{
+    margin-left: 20px;
+    margin-top: 10px ;
+}
+
+.add-panel
+{
+    height: 200px;
+    background-color: rgb(236, 236, 236);
+    border: 2px rgb(175, 175, 175) solid;
+    width: 100px;
+    border-radius: 8px;
+    margin-inline: 15px;
+    box-shadow: 3px 3px 5px rgb(206, 206, 206);
+
+}
+.pic-txt
+{
+    position: relative;
+    top: 60px;
+    left:15px;
+}
+
+.add-panel img
+{
+    position: relative;
+    top: 60px;
+    left: 25px;
+}
+
+.post-btn
+{
+    background-color: rgb(79, 199, 32);
+    height: 25px;
+    width: 100px;
+    font-size: 15px;
+    padding-inline: 14px;
+    padding-top: 3px;
+    border-radius: 7px;
+    margin-left:180px ;
+    margin-top: 14px;
+    box-shadow: 3px 3px 5px rgb(142, 157, 136);
 }
