--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,34 @@
     font-family: 'poppins', sans-serif;
     box-sizing:border-box;
 }
+post-input-container{
+    padding-left: 55px;
+    padding-top: 20px;
+}
+.post-input-container textarea{
+    width:100%;
+    border:0;
+    outline:0;
+    border-bottom: 1px solid #ccc;
+    background: transparent;
+    resize:none;
+}
+   .add-post-links{
+    display:flex;
+    margin-top:10px;
+}
+.add-post-links a{
+    text-decoration: none;
+    display:flex;
+    align-items:center;
+    color:#626262;
+    margin-right: 30px;
+    font-size:13px;
+}
+.add-post-links a img{
+    width:20px;
+    margin-right:10px;
+}
 
 :root{
     --body-color: #efefef;
@@ -21,6 +49,18 @@
 body{
     background: var(--body-color);
     transition: background 0.3s;
+}
+.post-button{
+    background-color: rgb(79, 199, 32);
+    height: 25px;
+    width: 100px;
+    font-size: 15px;
+    padding-inline: 14px;
+  border:none;
+    border-radius: 7px;
+    margin-left:200px ;
+
+    box-shadow: 3px 3px 5px rgb(142, 157, 136);
 }
 nav {
     display:flex;
@@ -90,6 +130,9 @@ padding: 0 15px;
     right:0;
 }
 .container{
+    background-image:url(images/rename.jpg);
+    background-size:100%;
+    background-repeat: no-repeat;
     display:flex;
     justify-content:space-between;
     padding: 13px 5%;
@@ -104,12 +147,14 @@ padding: 0 15px;
 .right-sidebar{
     flex-basis: 25%;
     position:sticky;
-    top:70px;
+    top:103px;
     align-self: flex-start;
     background: var(--bg-color);
     padding: 20px;
     border-radius:4px;
     color: #626262;   
+    box-shadow: 3px 3px 5px rgb(147, 147, 147);
+
  
 }
 .main-content{
@@ -145,21 +190,23 @@ margin-right:15px;
     color:#626262;
     font-weight:500;
 }
+.lb{
+    margin-left: 30px;
+    margin-bottom: 10px;
+}
 .sidebar-title{
     display:flex;
     align-items:center;
     justify-content: space-between;
-    margin-bottom:18px;
+    margin-top:30px;
+    margin-left: 68px;
+    font-size: 30px!;
 }
 .right-sidebar h4{
     font-weight:600;
     font-size:16px;
 }
-.sidebar-title a{
-    text-decoration:none;
-    color:#1876f2;
-    font-size:12px;
-}
+
 .event{
     display:flex;
     font-size:14px;
@@ -333,10 +380,12 @@ margin-right:15px;
    }
    .write-post-container{
        height: 80px;
+       box-shadow: 3px 3px 5px rgb(147, 147, 147);
+
        width:100%;
        background:var(--bg-color);
        border-radius: 6px;
-       padding:20px;
+       padding-inline:10px;
        color:#626262;
    }
    .user-profile{
@@ -391,6 +440,9 @@ margin-right:15px;
        padding:20px;
        color:#626262;
        margin:20px 0;
+       box-shadow: 3px 3px 5px rgb(147, 147, 147);
+
+       
    }
    .user-profile span{
        font-size: 13px;
@@ -780,3 +832,110 @@ border-radius: 4px;
         flex-basis:100%;
     }
 }
+.yoo{
+    background-color: rgb(250, 250, 250);
+    width: 300px;
+    height: 350px;
+    border-radius: 8px;
+    box-shadow: 3px 3px 5px rgb(147, 147, 147);
+    position: absolute;
+    margin-left: 20px;
+    z-index: 9;
+    top: 110px;
+  
+}
+
+.post-content
+{
+    font-size: 13px;
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+    margin-bottom:5px;
+}
+.marg
+{
+    margin-left: 20px;
+    margin-top: 10px ;
+}
+
+.add-panel
+{
+    height: 200px;
+    background-color: rgb(236, 236, 236);
+    border: 2px rgb(175, 175, 175) solid;
+    width: 100px;
+    border-radius: 8px;
+    margin-inline: 15px;
+    box-shadow: 3px 3px 5px rgb(206, 206, 206);
+
+}
+.pic-txt
+{
+    position: relative;
+    top: 60px;
+    left:15px;
+}
+
+.add-panel img
+{
+    position: relative;
+    top: 60px;
+    left: 25px;
+}
+
+.post-btn
+{
+    background-color: rgb(79, 199, 32);
+    height: 25px;
+    width: 100px;
+    font-size: 15px;
+    padding-inline: 14px;
+    padding-top: 3px;
+    border-radius: 7px;
+    margin-left:180px ;
+    margin-top: 14px;
+    box-shadow: 3px 3px 5px rgb(142, 157, 136);
+}
+
+.imgshopcart{
+    padding-left: 75px;
+    padding-right: 85px;
+
+    cursor: pointer;
+    height: auto;
+    width: 310px;
+    border-radius: 10px;
+    border: 3px rgb(91, 168, 91) dashed;
+
+}
+
+
+.post-input-container{
+    padding-left: 55px;
+    padding-top: 20px;
+ }
+ .post-input-container textarea{
+    width:100%;
+    border:0;
+    outline:0;
+    border-bottom: 1px solid #ccc;
+    background: transparent;
+    resize:none;
+ }
+ .add-post-links{
+    display:flex;
+    margin-top:10px;
+ }
+ .add-post-links a{
+    text-decoration: none;
+    display:flex;
+    align-items:center;
+    color:#626262;
+    margin-right: 30px;
+    font-size:13px;
+ }
+ .add-post-links a img{
+    width:20px;
+    margin-right:10px;
+ }
