--- a/style2.css
+++ b/style2.css
@@ -56,7 +56,8 @@ body{
     width: 100px;
     font-size: 15px;
     padding-inline: 14px;
-  border:none;
+    border:none;
+    cursor: pointer;
     border-radius: 7px;
     margin-left:200px ;
 
@@ -73,7 +74,9 @@ nav {
     height: 90px;
 }
 .logo{
-    width:230px;
+    width:100px;
+    margin-left: 90px;
+    margin-right: 20px;
    
 }
 .nav-left, .nav-right{
@@ -874,7 +877,8 @@ border-radius: 4px;
     margin-left: 20px;
     z-index: 9;
     top: 110px;
-  
+    display: none;
+    
 }
 
 .post-content
@@ -971,3 +975,9 @@ border-radius: 4px;
     width:20px;
     margin-right:10px;
  }
+.hed{
+    color: green;
+}
+.hed2{
+    color: black;
+}
