--- a/style2.css
+++ b/style2.css
@@ -8,10 +8,11 @@ post-input-container{
     padding-left: 55px;
     padding-top: 20px;
 }
+
 .post-input-container textarea{
     width:100%;
     font-size: 14px!important;
-
+    
     border:0;
     outline:0;
     border-bottom: 1px solid #ccc;
@@ -154,7 +155,7 @@ padding: 0 15px;
     right:0;
 }
 .container{
-    background-image:url(images/rename.jpg);
+    background-image:url(images/rename2.jpg);
     background-size:100%;
     background-repeat: no-repeat;
     display:flex;
@@ -169,7 +170,7 @@ padding: 0 15px;
     
 }
 .right-sidebar{
-    flex-basis: 25%;
+    width: 300px;
     position:sticky;
     top:103px;
     align-self: flex-start;
@@ -215,15 +216,15 @@ margin-right:15px;
     font-weight:500;
 }
 .lb{
-    margin-left: 30px;
+    margin-left: 50px;
     margin-bottom: 10px;
 }
 .sidebar-title{
     display:flex;
     align-items:center;
     justify-content: space-between;
-    margin-top:30px;
-    margin-left: 68px;
+    margin-top:0px;
+    margin-left: 50px;
     font-size: 30px!;
 }
 .right-sidebar h4{
@@ -317,12 +318,12 @@ margin-right:15px;
     align-items:center;
     justify-content: space-between;
     margin-bottom:5px;
-    font-size: 11px;
+    font-size: 13px;
 }
 .num1
 {
     color: rgb(187, 187, 51);
-    font-size: 15px;
+    font-size: 20px;
     display:flex;
     align-items:center;
     justify-content: space-between;
@@ -331,7 +332,7 @@ margin-right:15px;
 .num2
 {
     color: rgb(174, 174, 161);
-    font-size: 14px;
+    font-size: 17px;
     display:flex;
     align-items:center;
     justify-content: space-between;
@@ -340,7 +341,7 @@ margin-right:15px;
 .num3
 {
     color: rgb(121, 86, 37);
-    font-size: 13px;
+    font-size: 15px;
     display:flex;
     align-items:center;
     justify-content: space-between;
@@ -349,7 +350,7 @@ margin-right:15px;
 .you
 {
     color: rgb(45, 204, 109);
-    font-size: 11px;
+    font-size: 14px;
     display:flex;
     align-items:center;
     justify-content: space-between;
@@ -534,10 +535,11 @@ display: block;
 margin:auto;
 cursor: pointer;
 padding: 5px 10px;
-border:1px solid #9a9a9a;
-color:#626262;
+border:2px solid #000000;
+color:#ffffff;
 background-color: transparent;
 border-radius: 4px;
+font-size: 15px !important;
    }
    .footer{
    text-align: center;
@@ -783,7 +785,7 @@ border-radius: 4px;
 }
 /*-----------media query for home page------- */
 
-@media (max-width: 900px){
+/* @media (max-width: 900px){
     .right-sidebar{
         display: none;
     }
@@ -842,7 +844,7 @@ border-radius: 4px;
         margin: right 20px, imp !important;;
     }
     
-}
+} */
 /* ------------------ media query for profile page------------- */
 @media (max-width: 900px){
     .profile-container{
@@ -872,7 +874,7 @@ border-radius: 4px;
 .yoo{
     background-color: rgb(250, 250, 250);
     width: 300px;
-    height: 350px;
+    height: 360px;
     border-radius: 8px;
     box-shadow: 3px 3px 5px rgb(147, 147, 147);
     position: absolute;
@@ -925,26 +927,27 @@ border-radius: 4px;
 .post-btn
 {
     background-color: rgb(79, 199, 32);
-    height: 25px;
+    height: 30px;
     width: 100px;
     font-size: 15px;
     padding-inline: 14px;
-    padding-top: 3px;
+    padding-top: 6px;
     border-radius: 7px;
     margin-left:180px ;
     margin-top: 14px;
     box-shadow: 3px 3px 5px rgb(142, 157, 136);
+    cursor: pointer;
 }
 
 .imgshopcart{
-    padding-left: 75px;
-    padding-right: 85px;
+    padding-left: 60px;
+    padding-right: 110px;
 
     cursor: pointer;
     height: auto;
     width: 310px;
     border-radius: 10px;
-    border: 3px rgb(91, 168, 91) dashed;
+    /* border: 3px rgb(91, 168, 91) dashed; */
 
 }
 
